@@ -1,10 +1,7 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@ --with kde --parallel
+	dh $@ --with kde --parallel --dbg-package=qapt-dbg
 
 override_dh_install:
 	dh_install --fail-missing
-
-override_dh_strip:
-	dh_strip --dbg-package=qapt-dbg
