@@ -3,6 +3,7 @@ qapt (1.2.2-2) UNRELEASED; urgency=low
   * debian/gbp.conf: Added to ensure pristine-tar usage and signed tags.
   * debian/watch: use git-import-orig.
   * debian/control: Added Vcs-{Git,Browser} fields.
+  * debian/rules: Remove override for dh_strip, not needed.
 
  -- Kai Wasserbäch <curan@debian.org>  Wed, 14 Dec 2011 18:56:08 +0100
 
